add a layover div with js event listener which open up on click and goes hidden when clicked off

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -11,3 +11,25 @@ body {
 #map-canvas {
   height: 100%;
 }
+
+.hidden {
+  display: none;
+}
+
+.layover {
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.card {
+  position: absolute;
+  height: 70%;
+  width: 70%;
+  top: 18%;
+  left: 15%;
+  background: white;
+}
