--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,7 +1,7 @@
 #map-canvas
 
 .layover.hidden
-  .card
+  .card.dropIn
 
 %a{href: 'http://www.plated.com/', target: 'blank'}
   = image_tag('http://dusyefwqqyfwe.cloudfront.net/assets/logos/plated@2x-fae781cca4956ac76ed81256636e2209.png', class: 'logo')
